--- a/css/site-specific.css
+++ b/css/site-specific.css
@@ -7,9 +7,17 @@ body {
   
 }
 
+.textcenter{
 
+	text-align: center;
+}
 p{
 	font-size: 20px;
+}
+
+p.footer{
+
+	font-size: 18px;
 }
 
 h2{
@@ -19,12 +27,9 @@ h2{
 
 .footer{
 
-	background-color: rgba(254,165,1,.5);
-	padding-top: 20px;
-	padding-bottom: 20px;
-	height: 70px;
-	
-
+	background-color: #f3f4f4;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 .space{
